[package]
name = "bimbows_calculator"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["yuu0141 <eddio0141@gmail.com>"]
description = "Calculator that is close to windows 10 calculator cause I can't use KCalc properly"
repository = "https://github.com/Eddio0141/bimbows_calculator"
lisense = "MIT OR Apache-2.0"
keywords = ["calculator", "GUI"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
